--- a/app/src/main/res/layout/activity_jednostki_edytuj.xml
+++ b/app/src/main/res/layout/activity_jednostki_edytuj.xml
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:onClick="usunJednostke"
+                android:onClick="stopEdit"
                 android:text="Anuluj edycie"
                 android:enabled="false"/>
 
