--- a/app/src/main/res/layout/activity_pomiary_dopisz.xml
+++ b/app/src/main/res/layout/activity_pomiary_dopisz.xml
@@ -62,10 +62,7 @@
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                style="@style/mySpinnerItemStyle"
-                />
+                android:minHeight="48dp" />
 
 
             <Button
@@ -74,8 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:onClick="zapiszNowaPozycia"
-                android:text="Zapisz nową pozycję"
-                />
+                android:text="Zapisz nową pozycję" />
 
         </LinearLayout>
     </ScrollView>
