--- a/app/src/main/res/layout/activity_pomiary_edytuj.xml
+++ b/app/src/main/res/layout/activity_pomiary_edytuj.xml
@@ -37,6 +37,7 @@
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:enabled="false"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <TextView
@@ -54,6 +55,7 @@
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:enabled="false"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <TextView
@@ -69,7 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck" />
+                tools:ignore="SpeakableTextPresentCheck"
+                android:enabled="false"/>
 
 
             <Button
@@ -78,17 +81,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:onClick="aktualizuj"
-                android:text="Aktualizuj dane" />
+                android:text="Aktualizuj dane"
+                android:backgroundTint="@color/colorPrimary"
+                android:enabled="false"/>
 
             <Button
                 android:id="@+id/button_disable_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FF0000"
-                android:onClick="usun"
-                android:text="Kasuj rekord"
-                android:textColor="#FFFFFF" />
+                android:onClick="stopEdit"
+                android:text="Anuluj edycie"
+                android:enabled="false"/>
 
         </LinearLayout>
     </ScrollView>
