--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -9,8 +9,8 @@
                 android:title="Jednostki"/>
             <item android:id="@+id/naw_pomiary"
                 android:title="Pomiary"/>
-<!--            <item android:id="@+id/naw_terapie"-->
-<!--                android:title="Terapie"/>-->
+            <item android:id="@+id/naw_terapie"
+                android:title="Terapie"/>
             <item android:id="@+id/naw_wpisy"
                 android:title="Wpisy"/>
 
