--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:theme="@style/MyAppTheme"
     android:background="@color/colorPrimary"
     android:paddingVertical="10dp"
     android:paddingRight="10dp"
@@ -13,8 +13,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/design_default_color_background">
-
+        android:theme="@style/MyAppTheme"
+        android:background="@color/cardview_light_background">
+<!--        android:background="@color/primary_material_dark"-->
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -25,7 +26,6 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
