--- a/app/src/main/res/layout/activity_terapia_dopisz_element.xml
+++ b/app/src/main/res/layout/activity_terapia_dopisz_element.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        android:padding="20dp">
+        android:paddingVertical="10dp">
 
         <TextView
             android:id="@+id/textView3"
@@ -25,10 +25,9 @@
 
         <Spinner
             android:id="@+id/spinnerPomiary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp"
-            android:paddingLeft="50dp"
+            android:layout_width="200dp"
+            android:layout_height="48dp"
+            android:dropDownWidth="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/usunPomiar"
             app:layout_constraintStart_toEndOf="@+id/textView3"
