--- a/app/src/main/res/layout/activity_terapia_dopisz_x_razy.xml
+++ b/app/src/main/res/layout/activity_terapia_dopisz_x_razy.xml
@@ -35,16 +35,19 @@
         <EditText
             android:id="@+id/editTextTime"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:maxEms="5"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
             android:clickable="false"
-            android:cursorVisible="false"
+            android:cursorVisible="true"
+            android:ems="4"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:inputType="time"
+            android:maxEms="5"
+            android:singleLine="true"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/usunPomiar"
+            app:layout_constraintEnd_toStartOf="@+id/usunGodzine"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent" />
 
