--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,8 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:theme="@style/MyAppTheme"
-        android:background="@color/cardview_light_background">
-<!--        android:background="@color/primary_material_dark"-->
+        android:background="?attr/colorOnBackground">
+<!--        android:background="@color/cardview_light_background">-->
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
