--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                     android:layout_marginEnd="24dp"
                     android:background="@color/sb__transparent"
                     android:onClick="dalej"
-                    android:text="dalej"
+                    android:text="Później"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:textStyle="bold"
@@ -82,6 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_marginTop="4dp"
                 android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
 
