--- a/app/src/main/res/layout/activity_terapia_dopisz.xml
+++ b/app/src/main/res/layout/activity_terapia_dopisz.xml
@@ -183,7 +183,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:focusable="true" android:focusableInTouchMode="true"
-                android:onClick="zapiszNowaPozycia"
+                android:onClick="zapiszNowaTerapie"
                 android:text="Zapisz nową terapie" />
 
         </LinearLayout>
