--- a/app/src/main/res/layout/activity_jednostki_edytuj.xml
+++ b/app/src/main/res/layout/activity_jednostki_edytuj.xml
@@ -1,110 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".jednostki.JednostkiEdytuj">
 
-    <ScrollView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextNazwaLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:hint="Nazwa"
+        app:endIconMode="clear_text">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNazwa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextJednostkaLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:hint="Wartość"
+        app:endIconMode="clear_text">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextJednostka"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/spinnerLayout"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:hint="Dokładność">
+
+        <AutoCompleteTextView
+            android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:inputType="none"
+            app:simpleItems="@array/dokladnosc"
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nazwa jednostki"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+            />
 
-            <EditText
-                android:id="@+id/editTextNazwa"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:enabled="false"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Wartość jednostki"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/editTextJednostka"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:enabled="false"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/spinner2Layout"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:hint="Zastosowanie">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Dokładność"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+        <AutoCompleteTextView
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            app:simpleItems="@array/przeznaczenie"
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/dokladnosc"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:enabled="false"/>
+            />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Przeznaczenie"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/przeznaczenie"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:enabled="false"/>
 
-            <Button
-                android:id="@+id/button_save_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:onClick="aktualizujJednostke"
-                android:text="Zapisz edycie"
-                android:backgroundTint="@color/colorPrimary"
-                android:enabled="false"/>
+    <Button
+        android:id="@+id/button_save_edit"
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="24dp"
+        android:onClick="aktualizujJednostke"
+        android:enabled="false"
+        android:text="Zapisz nową jednostkę"
+        app:icon="@drawable/ic_update_24" />
 
-            <Button
-                android:id="@+id/button_disable_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:onClick="stopEdit"
-                android:text="Anuluj edycie"
-                android:enabled="false"/>
+    <Button
+        android:id="@+id/button_disable_edit"
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="24dp"
+        android:enabled="false"
+        android:onClick="stopEdit"
+        android:text="Anuluj edycie"
+        app:icon="@drawable/ic_clear_24"/>
 
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+</LinearLayout>
