--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,27 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MojePomiary" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MojePomiary" parent="Theme.Material3.Dark.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorOnBackground">@color/primary_material_dark</item>
+
         <item name="android:textColor">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+
     </style>
 
-    <style name="MyAppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="MyAppTheme" parent="Theme.Material3.Dark">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorOnBackground">@color/primary_material_dark</item>
+
+        <item name="colorOnBackground">@color/material_dynamic_neutral20</item>
     </style>
 
     <style name="MyDatePicker" >
